# GamesParser

./: .gitignore  .yamllint.yml  README.md  env.example  main.py  pyproject.toml  requirements.txt  run.bat  setup.cfg  setup.py
html_articles/: 12539869.html  12540548.html  12550549.html  12560763.html  12560798.html  12564591.html  12568381.html  12575607.html
src/: __init__.py  main.py
src/bot/: __init__.py  bot.py  message_formatter.py  retry_handler.py
src/common/: __init__.py  constants.py  logger.py  singleton.py
src/config/: __init__.py  config.py
src/models/: __init__.py  models.py
src/parser/: __init__.py  dtf_parser.py  html_saver.py  parser.py  parser_manager.py  pikabu_parser.py  vgtimes_parser.py
src/parser/utils/: __init__.py  description_helper.py  logger.py
src/parsers/: html_saver.py  parser_manager.py  pikabu_parser.py  vgtimes_parser.py
src/parsers/utils/: __init__.py  base_parser.py  description_helper.py  logger.py
src/storage/: __init__.py  database.py  storage.py
src/tests/: __init__.py  inspect_vgtimes.py  save_page.py  test_bot.py  test_parser.py  test_parsers.py  test_real_page.py  test_storage.py  test_vgtimes_parser.py
tests/: expected.json  generate_test_data.py  test_parser.py  test_vgtimes_parser.py
